resolves layout issues

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -383,6 +383,7 @@ dd {
   margin-bottom: 1.45rem;
 }
 p {
+  font-size: .85rem;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -848,23 +849,29 @@ a.ant-anchor-link-title:hover {
 
 .blog-post h2 {
   color: #000000;
-  padding-top: 2rem;
-  padding-bottom: .45rem;
+  margin-top: 2rem;
+  margin-bottom: .45rem;
   left: 0;
   border-bottom: 1px solid #000000;
 }
 
 .blog-post h3 {
   color: #000000;
-  padding-top: 2rem;
-  padding-bottom: 1.45rem;
+  margin-top: 2rem;
+  margin-bottom: 1.45rem;
   left: 0;
 }
 
 .blog-post h2 + h3 {
   color: #000000;
-  padding-top: .2rem;
-  padding-bottom: 1.45rem;
+  margin-top: .2rem;
+  margin-bottom: 1.45rem;
+  left: 0;
+}
+
+.blog-post p + h2 {
+  margin-top: 2rem !important;
+  margin-bottom: 1.45rem;
   left: 0;
 }
 
@@ -899,11 +906,12 @@ a.ant-anchor-link-title:hover {
   color: #577BFB;
 }
 
-.blog-post p > img {
-  margin: 0 auto;
+.blog-post p > span {
+  margin: 1.45rem auto;
   width: 65%;
   display: block;
 }
+
 h1:hover .post-toc-anchor,
 h2:hover .post-toc-anchor,
 h3:hover .post-toc-anchor,
